mal wieder ein Pathfinding fix

--- a/Game v1/TODO.txt
+++ b/Game v1/TODO.txt
@@ -1,6 +1,7 @@
 //// Engine
 
-maus klicks
+nodeMap auch wieder entladen bei chunkunload
+fehler beim collisionComparer wegen MathHelper.round...ToInt beheben
 
 //// Gameplay
 
