Implemented simple Server/Client Connection, and VSync fix

--- a/Game v1/TODO.txt
+++ b/Game v1/TODO.txt
@@ -6,6 +6,12 @@ fehler beim collisionComparer wegen MathHelper.round...ToInt beheben
 
 (kommt später)
 
+//////////////////////////// 
+//// Render Thread
+
+(vorher VBOs von Chunk verbessern, in nur einen VBO)
+
+Laden / generieren von Chunks asyncron
 
 
 ###################################
